[gd_scene load_steps=3 format=3 uid="uid://fexh1lqu6nd6"]

[ext_resource type="FontFile" uid="uid://cukbh76vmlrwj" path="res://fonts/PressStart2P-Regular.ttf" id="1_f4fvh"]
[ext_resource type="Script" path="res://scenes/Hiscores.gd" id="1_j8cwy"]

[node name="Hiscores" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8cwy")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_top = 10.0
offset_right = 36.0
offset_bottom = 18.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_f4fvh")
theme_override_font_sizes/font_size = 8
text = "HI-SCORES"

[node name="MainMenu" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -9.0
offset_right = 60.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_f4fvh")
theme_override_font_sizes/font_size = 4
text = "Press Enter to go to Main Menu"

[node name="ScoreContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 31.0
offset_right = -16.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2

[node name="InputDelay" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="InputDelay" to="." method="_on_input_delay_timeout"]
